# agentmem

./: .coverage  .gitignore  README.md  autoresearch-results.tsv  pyproject.toml
agent_memory/: __init__.py  cli.py  dashboard.py  db.py  dream.py  embedding.py  extract.py  init_cmd.py  llm.py  llm_extract.py  mcp_server.py  models.py  search.py  session.py  state.py  store.py  vector.py  watch.py
claude_agent_memory.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
docs/plans/: 2026-03-26-architecture-implementation.md  2026-03-26-architecture-optimization-design.md
scripts/: eval_search.py
tests/: conftest.py  test_cli.py  test_dashboard.py  test_db.py  test_dream.py  test_dream_e2e.py  test_extract.py  test_integration.py  test_search.py  test_session.py  test_state.py  test_store.py  test_watch.py
